TestRepo2/src/objects/Order_Window_Customer__c.object
<CustomObject>
    <description>POS Project: junction object that represents the many-to-many relationship between Order Windows and Users (customers)</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Window_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Magento_Id__c</fullName>
        <externalId>true</externalId>
        <label>Magento Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_For_Shopping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open for Shopping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Window__c</fullName>
        <label>Order Window</label>
        <referenceTo>Order_Window__c</referenceTo>
        <relationshipLabel>Order Window Customers</relationshipLabel>
        <relationshipName>Order_Window_Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Order Window Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Magento_Id__c</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OWC-{000000}</displayFormat>
        <label>Order Window Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Window Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_Window_Status</fullName>
        <active>true</active>
        <description>Prevents creating or editing an Order Window Customer is the related Order Window is new, completed or archived, except for the &quot;Open for Shopping&quot; field which can always be edited</description>
        <errorConditionFormula>(ISNEW() &amp;&amp; (TEXT(Order_Window__r.Status__c) = &quot;New&quot; || TEXT(Order_Window__r.Status__c) = &quot;Completed&quot; || TEXT(Order_Window__r.Status__c) = &quot;Archived&quot;)) || (NOT(ISNEW()) &amp;&amp; (TEXT(Order_Window__r.Status__c) = &quot;New&quot; || TEXT(Order_Window__r.Status__c) = &quot;Completed&quot; || TEXT(Order_Window__r.Status__c) = &quot;Archived&quot;) &amp;&amp; (ISCHANGED(Name) || ISCHANGED(Customer__c)))</errorConditionFormula>
        <errorMessage>It is not possible to create or edit an Order Window Customer if the related Order Window is new, completed or archived, except for the &quot;Open for Shopping&quot; field which can always be edited</errorMessage>
    </validationRules>
</CustomObject>